--- a/nginx/mydomain.conf
+++ b/nginx/mydomain.conf
@@ -14,6 +14,29 @@ server {
   gzip_proxied    no-cache no-store private expired auth;
   gzip_min_length 1000; 
 
+# WebP Express rules
+# --------------------
+location ~* ^/?wp-content/.*\.(png|jpe?g)$ {
+  add_header Vary Accept;
+  expires 365d;
+  if ($http_accept !~* "webp"){
+    break;
+  }
+  try_files
+    /wp-content/webp-express/webp-images/doc-root/$uri.webp
+    $uri.webp
+    /wp-content/plugins/webp-express/wod/webp-on-demand.php?xsource=x$request_filename&wp-content=wp-content
+    ;
+}
+
+# Route requests for non-existing webps to the converter
+location ~* ^/?wp-content/.*\.(png|jpe?g)\.webp$ {
+    try_files
+      $uri
+      /wp-content/plugins/webp-express/wod/webp-realizer.php?xdestination=x$request_filename&wp-content=wp-content
+      ;
+}
+# ------------------- (WebP Express rules ends here)
 
 #------------------------------------------------------------------------------------------ 
   # Cache Static Files
@@ -22,37 +45,6 @@ server {
     log_not_found off;
     access_log off;
     }
-
-
-# -----------------------------------------------------------------------------------------
-  # Static Wordpress Files
-  location / {
-    try_files /wp-content/cache/supercache/$http_host/$cache_uri/index.html $uri $uri/ /index.php?$args;
-  }
-
-
-#------------------------------------------------------------------------------------------  
-  # WebP Express rules
-#  location ~* ^/?wp-content/.*\.(png|jpe?g)$ {
-#    add_header Vary Accept;
-#    expires 365d;
-#    if ($http_accept !~* "webp"){
-#      break;
-#    }
-#    try_files
-#      /wp-content/webp-express/webp-images/doc-root/$uri.webp
-#      $uri.webp
-#      /wp-content/plugins/webp-express/wod/webp-on-demand.php?xsource=x$request_filename&wp-content=wp-content
- #     ;
- # }
-
-#  # Route requests for non-existing webps to the converter
-#  location ~* ^/?wp-content/.*\.(png|jpe?g)\.webp$ {
-#      try_files
-#        $uri
-#        /wp-content/plugins/webp-express/wod/webp-realizer.php?xdestination=x$request_filename&wp-content=wp-content
-#        ;
-#  }
 
 
 #--------------------------------------------------------------------------------------------
@@ -79,6 +71,11 @@ set $cache_uri $request_uri;
     }
 
 
+# -----------------------------------------------------------------------------------------
+  # Static Wordpress Files
+  location / {
+    try_files /wp-content/cache/supercache/$http_host/$cache_uri/index.html $uri $uri/ /index.php?$args;
+  }
 
 # -------------------------------------------------------------------------------------------
   # pass the PHP scripts to FastCGI server listening on wordpress:9000
